MDEV-30313 Sporadic assertion `cond_selectivity <= 1.0' failure in get_range_limit_read_cost

The bug was related to floating point rounding. Fixed the assert to take
that into account.